--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/metacollin/kicad-gigalib.git
 [submodule "lib/X68k-kicad-library"]
 	path = lib/X68k-kicad-library
-	url = git@github.com:kunichiko/X68k-kicad-library.git
+	url = https://github.com/kunichiko/X68k-kicad-library.git
 [submodule "lib/savenlid-kicad-lib"]
 	path = lib/savenlid-kicad-lib
 	url = https://github.com/savenlid/kicad.git
